--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cryptopahala - Solusi investasi dunia akhirat </title>
+  <!-- Why doesn't the icon work? -->
   <link rel="icon" type="image/ico" href="./img/logo-blue2.png"/>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="page1">
   <main class="main-container">
-    <div id="page1">
       <div class="header">
         <img class="header-img" src="./img/header2.png" alt="header"/>
       </div>
@@ -25,7 +25,6 @@
           </button>
         </div>
       </div>
-    </div>
   </main>
   <script src="app.js"></script>
 </body>
