--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cryptopahala - Solusi investasi dunia akhirat </title>
   <!-- Why doesn't the icon work? -->
-  <link rel="icon" type="image/ico" href="./img/logo-blue2.png"/>
+  <link rel="shortcut icon" type="image/ico" href="./img/logo-blue2.png"/>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300&display=swap" rel="stylesheet">
 </head>
